Fix error in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "Btg\MyBudgetBundle",
+  "name": "App\\Btg\\MyBudgetBundle",
   "type": "symfony-bundle",
   "description": "Symfony bundle for budgeting",
   "license": "MIT",
