--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,35 +1,35 @@
 BtgMyBudgetBundle_homepage:
     pattern:  /hello/{name}
-    defaults: { _controller: BtgMyBudgetBundle:Default:index }
+    defaults: { _controller: Btg\MyBudgetBundle:Default:index }
 
 BtgMyBudgetBundle_reports:
   pattern: /budget/reports
-  defaults: { _controller: BtgMyBudgetBundle:Reports:numeric }
+  defaults: { _controller: Btg\MyBudgetBundle:Reports:numeric }
   
 BtgMyBudgetBundle_help_notes:
   pattern: /budget/help/notes
-  defaults: { _controller: BtgMyBudgetBundle:Help:notes }
+  defaults: { _controller: Btg\MyBudgetBundle:Help:notes }
     
 BtgMyBudgetBundle_help:
   pattern: /budget/help
-  defaults: { _controller: BtgMyBudgetBundle:Import:help }
+  defaults: { _controller: Btg\MyBudgetBundle:Import:help }
   
 BtgMyBudgetBundle_import:
   pattern: /budget/import
-  defaults: { _controller: BtgMyBudgetBundle:Import:process }
+  defaults: { _controller: Btg\MyBudgetBundle:Import:process }
 
 BtgMyBudgetBundle_categories:
   pattern: /budget/categories
-  defaults: { _controller: BtgMyBudgetBundle:Category:categories }
+  defaults: { _controller: Btg\MyBudgetBundle:Category:categories }
   
 BtgMyBudgetBundle_matches:
   pattern: /budget/matches
-  defaults: { _controller: BtgMyBudgetBundle:Matches:matches }
+  defaults: { _controller: Btg\MyBudgetBundle:Matches:matches }
   
 BtgMyBudgetBundle_options:
   pattern: /budget/options
-  defaults: { _controller: BtgMyBudgetBundle:Options:edit }
+  defaults: { _controller: Btg\MyBudgetBundle:Options:edit }
   
 BtgMyBudgetBundle_transactions:
   pattern: /budget/transactions
-  defaults: { _controller: BtgMyBudgetBundle:Transaction:transactions }
+  defaults: { _controller: Btg\MyBudgetBundle:Transaction:transactions }
